--- a/Login.html
+++ b/Login.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+         body{
+        background-image: url("Images/RegistrationImage.png");
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: 100% 100%;
+    }
+    label,h2
+    {
+        color: #ffffff;
+    }
+    </style>
+   
 </head>
 <body>
     <form class="pure-button">
