--- a/Register.html
+++ b/Register.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration form</title>
+
+    <style>
+        body{
+            background-image: url("Images/RegistrationImage.png");
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: 100% 100%;
+        }
+
+        label,h2,summary{
+            color: #ffffff;
+        }
+    </style>
 </head>
 <body>
+    
+
     <form action=" ">
         <fieldset><legend><h2>Registration Form📝</h2></legend>
             <h2><pre><u>Personal Details...</u></pre></h2>
@@ -28,10 +43,10 @@
                     </ol>
                 </details><br>
             </ol>
-            <h3><pre><button><a href="file:///C:/Users/raks3556/Desktop/LeaveManagementSystem/Thankyou.html">Submit</a></button></pre></h3>                
-            <h3><button><a href="file:///C:/Users/raks3556/Desktop/LeaveManagementSystem/WelcomePage.html">Back To MainPage</a></button></h3>
+            <h3><a href="file:///C:/Users/raks3556/Desktop/LeaveManagementSystem/Thankyou.html"><button>Submit</a></button></pre></h3>                
+            <h3><a href="file:///C:/Users/raks3556/Desktop/LeaveManagementSystem/WelcomePage.html"><button>Back To MainPage</a></button></h3>
             </fieldset>
     </form>
-    
+
 </body>
 </html>
