--- a/Thankyou.html
+++ b/Thankyou.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+       background-image: url("Images/RegistrationImage.png");
+       background-repeat: no-repeat;
+       background-attachment: fixed;
+       background-size: 100% 100%;
+   }
+   h4,h3{
+    color: #ffffff;
+   }
+   </style>
 </head>
 <body>
     <form action=" ">
