E-Commerce Website update

--- a/WelcomePage.html
+++ b/WelcomePage.html
@@ -69,25 +69,25 @@
                         <img src="Images/ac.jpg" class="card-img-top" alt="airconditioner">
                         <div class="card-body text-center">
                           <h5 class="card-title">Air Conditioners</h5>
-                          <a href="http://127.0.0.1:5500/Infinity%20Products/AirConditioners.html" class="btn btn-outline-success">See More</a>
+                          <a href="http://127.0.0.1:5500/Infinity%20Products/AirConditioners.html" class="btn btn-outline-dark">See More</a>
                         </div>
                       </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <img src="Images//fridge.jpg" class="card-img-top" alt="electronics">
+                        <img src="Images//fridge.jpg" class="card-img-top" alt="Refrigerator">
                         <div class="card-body text-center">
                           <h5 class="card-title">Refrigerators</h5>
-                          <a href="#" class="btn btn-outline-success">See More</a>
+                          <a href="http://127.0.0.1:5500/Infinity%20Products/Refrigerator.html" class="btn btn-outline-dark">See More</a>
                         </div>
                       </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <img src="Images/washingmachine.jpg" class="card-img-top" alt="electronics">
+                        <img src="Images/washingmachine.jpg" class="card-img-top" alt="washingmachine">
                         <div class="card-body text-center">
                           <h5 class="card-title">Washing Machines</h5>
-                          <a href="#" class="btn btn-outline-success">See More</a>
+                          <a href="http://127.0.0.1:5500/Infinity%20Products/Washingmachine.html" class="btn btn-outline-dark">See More</a>
                         </div>
                       </div>
                 </div>
@@ -95,19 +95,19 @@
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <img src="Images/homedecor.jpg" class="card-img-top" alt="airconditioner">
+                        <img src="Images/homedecor.jpg" class="card-img-top" alt="homedecor">
                         <div class="card-body text-center">
                           <h5 class="card-title">Home Decorators</h5>
-                          <a href="#" class="btn btn-outline-success">See More</a>
+                          <a href="http://127.0.0.1:5500/Infinity%20Products/Home%20Decor.html" class="btn btn-outline-dark">See More</a>
                         </div>
                       </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <img src="Images/furnitures.jpg" class="card-img-top" alt="electronics">
+                        <img src="Images/furnitures.jpg" class="card-img-top" alt="furnitures">
                         <div class="card-body text-center">
                           <h5 class="card-title">Furnitures</h5>
-                          <a href="#" class="btn btn-outline-success">See More</a>
+                          <a href="#" class="btn btn-outline-dark">See More</a>
                         </div>
                       </div>
                 </div>
@@ -116,7 +116,7 @@
                         <img src="Images/makeup.webp" class="card-img-top" alt="electronics">
                         <div class="card-body text-center">
                           <h5 class="card-title">MakeUp Products</h5>
-                          <a href="#" class="btn btn-outline-success">See More</a>
+                          <a href="#" class="btn btn-outline-dark">See More</a>
                         </div>
                       </div>
                 </div>
@@ -124,28 +124,28 @@
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <img src="Images/cloths.webp" class="card-img-top" alt="airconditioner">
+                        <img src="Images/cloths.webp" class="card-img-top">
                         <div class="card-body text-center">
                           <h5 class="card-title">Womens Clothes</h5>
-                          <a href="#" class="btn btn-outline-success">See More</a>
+                          <a href="#" class="btn btn-outline-dark">See More</a>
                         </div>
                       </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <img src="Images/menscloths.webp" class="card-img-top" alt="electronics">
+                        <img src="Images/menscloths.webp" class="card-img-top">
                         <div class="card-body text-center">
                           <h5 class="card-title">Mens Clothes</h5>
-                          <a href="#" class="btn btn-outline-success">See More</a>
+                          <a href="#" class="btn btn-outline-dark">See More</a>
                         </div>
                       </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <img src="Images/health.jpg" class="card-img-top" alt="electronics">
+                        <img src="Images/health.jpg" class="card-img-top">
                         <div class="card-body text-center">
                           <h5 class="card-title">Health Care</h5>
-                          <a href="#" class="btn btn-outline-success">See More</a>
+                          <a href="#" class="btn btn-outline-dark">See More</a>
                         </div>
                       </div>
                 </div>
@@ -172,7 +172,6 @@
         </div>
       </section>
 
-      <div class="b-example-divider"></div>
 
   <footer id="footer">
       <p class="text-center"> Conditions of Use & Sale
