--- a/Refrigerator.html
+++ b/Refrigerator.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Air Conditioners</title>
-    <link rel="stylesheet" href="AirConditioners.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="Refrigerator.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -39,13 +39,13 @@
       </form>
     </div>
 </nav>
-    <section id="AirConditioners">
+    <section id="Refrigerator">
         <div class="container m-5">
-            <h1 class="text-center my-5">Air Conditioners</h1>
+            <h1 class="text-center my-5">Refrigerators</h1>
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <img src="Images/air1.webp" class="card-img-top" alt="airconditioner" width="300" height="300">
+                        <img src="Images/air1.webp" class="card-img-top" alt="Refrigerator" width="300" height="300">
                         <div class="card-body text-center">
                           <h5 class="card-title">Daikin 1.8 Ton 3 Star Inverter Split AC (Copper, Anti Bacterial Filter, ATKL60UV16, White)</h5>
                           <h4>₹45,990 M.R.P: <h4 class="text-decoration-line-through">₹84,990</h4> (46% off)
@@ -56,7 +56,7 @@
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <img src="Images/air2.jpg" class="card-img-top" alt="electronics" width="300" height="300">
+                        <img src="Images/air2.jpg" class="card-img-top" alt="Refrigerator" width="300" height="300">
                         <div class="card-body text-center">
                           <h5 class="card-title">Blue Star 1.5 Ton 5 Star Convertible 5 in 1 Cooling Inverter Split Air Conditioner (IC518YNU, White)</h5>
                           <h4>₹49,490 M.R.P: <h4 class="text-decoration-line-through">₹69,990</h4>(28% off)
@@ -67,7 +67,7 @@
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <img src="Images/air3.jpg" class="card-img-top" alt="electronics" width="300" height="300">
+                        <img src="Images/air3.jpg" class="card-img-top" alt="Refrigerator" width="300" height="300">
                         <div class="card-body text-center">
                           <h5 class="card-title">Samsung 1.5 Ton 3 Star Wind-Free Technology Inverter Split AC (Copper, Convertible 5-in-1 Cooling Mode, Anti-bacterial Filter, 2023 Model AR18CYLAMWK White)</h5>
                           <h4>50+ bought in past month
@@ -81,7 +81,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <img src="Images/air4.jpg" class="card-img-top" alt="airconditioner" width="300" height="300">
+                        <img src="Images/air4.jpg" class="card-img-top" alt="Refrigerator" width="300" height="300">
                         <div class="card-body text-center">
                           <h5 class="card-title">Carrier 1.5 Ton 5 Star Inverter Split AC (Copper,ESTER Dxi, 6-in-1 Flexicool Inverter, 2022 Model,R32 ,White)</h5>
                           <h4>₹45,580 M.R.P: <h4 class="text-decoration-line-through">₹69,990</h4>(35% off)
@@ -92,7 +92,7 @@
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <img src="Images/air5.webp" class="card-img-top" alt="electronics" width="300" height="300">
+                        <img src="Images/air5.webp" class="card-img-top" alt="Refrigerator" width="300" height="300">
                         <div class="card-body text-center">
                           <h5 class="card-title">Carrier 2 Ton 5 Star Inverter Split AC (Copper,ESTER Dxi, 6-in-1 Flexicool Inverter, 2022 Model,R32,White)
                             3.9 out of 5 stars</h5>
@@ -104,7 +104,7 @@
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <img src="Images/air6.webp" class="card-img-top" alt="electronics" width="300" height="300">
+                        <img src="Images/air6.webp" class="card-img-top" alt="Refrigerator" width="300" height="300">
                         <div class="card-body text-center">
                           <h5 class="card-title">Blue Star 1.5 Ton 3 Star 5 in 1 Convertible Inverter Split AC (Copper, Multi Sensors, Stabalizer Free Operation, Self Diagnosis, 2023 Model, IA318FNU, White)</h5>
                           <h4>No featured offers available
@@ -117,7 +117,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <img src="Images/air7.jpg" class="card-img-top" alt="airconditioner" width="300" height="300">
+                        <img src="Images/air7.jpg" class="card-img-top" alt="Refrigerator" width="300" height="300">
                         <div class="card-body text-center">
                           <h5 class="card-title">Blue Star 1.5 Ton 3 Star Fixed Speed Window AC</h5>
                           <h4>-31% ₹34,440
@@ -130,7 +130,7 @@
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <img src="Images/air8.webp" class="card-img-top" alt="electronics" width="300" height="300">
+                        <img src="Images/air8.webp" class="card-img-top" alt="Refrigerator" width="300" height="300">
                         <div class="card-body text-center">
                           <h5 class="card-title">Voltas Split Air Conditioner SAC 185V CAZZ, White</h5>
                           <h4>No featured offers available
@@ -141,7 +141,7 @@
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <img src="Images/airr9.webp" class="card-img-top" alt="electronics" width="300" height="300">
+                        <img src="Images/airr9.webp" class="card-img-top" alt="Refrigerator" width="300" height="300">
                         <div class="card-body text-center">
                           <h5 class="card-title">Blue Star 4 in 1 Convertible 2 Ton 3 Star Inverter Split Air Conditioner with Dust Filter (Copper Condenser)</h5>
                           <h4>₹49,410 M.R.P: <h4 class="text-decoration-line-through"></h4> (42% off)
@@ -153,7 +153,6 @@
             </div>
         </div>
       </section>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
