--- a/Home Decor.html
+++ b/Home Decor.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Washingmachine</title>
+    <title>Home Decors</title>
     <link rel="stylesheet" href="Home Decor.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -34,7 +34,7 @@
           </ul>
         </li>
       </ul>
-      <form class="d-flex" role="search">
+      <form class="d-flex" role="search" id="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
       </form>
     </div>
