--- a/Refrigerator.html
+++ b/Refrigerator.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Refrigerators</title>
     <link rel="stylesheet" href="Refrigerator.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -22,7 +22,7 @@
           <a class="nav-link" href="http://127.0.0.1:5500/Infinity%20Products/WelcomePage.html#about">About Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="http://127.0.0.1:5500/Infinity%20Products/WelcomePage.html#contact">Contact</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -34,7 +34,7 @@
           </ul>
         </li>
       </ul>
-      <form class="d-flex" role="search">
+      <form class="d-flex" role="search" id="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
       </form>
     </div>
@@ -45,29 +45,27 @@
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <img src="Images/air1.webp" class="card-img-top" alt="Refrigerator" width="300" height="300">
+                        <img src="Images/fridge.webp" class="card-img-top" alt="Refrigerator" width="300" height="300" id="rendering">
                         <div class="card-body text-center">
-                          <h5 class="card-title">Daikin 1.8 Ton 3 Star Inverter Split AC (Copper, Anti Bacterial Filter, ATKL60UV16, White)</h5>
-                          <h4>₹45,990 M.R.P: <h4 class="text-decoration-line-through">₹84,990</h4> (46% off)
-                            Upto 10% Off on select cardsUpto 10% Off on select cards</h4>
+                          <h5 class="card-title">Samsung 633 L3 start Refrigerator</h5>
+                          <h4>₹1,09,000</h4>
                           <a href="http://127.0.0.1:5500/Infinity%20Products/AddToCart.html" class="btn btn-outline-dark">Add to cart</a>
                         </div>
                       </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <img src="Images/air2.jpg" class="card-img-top" alt="Refrigerator" width="300" height="300">
+                        <img src="Images/fridge2.webp" class="card-img-top" alt="Refrigerator" width="300" height="300" id="rendering">
                         <div class="card-body text-center">
-                          <h5 class="card-title">Blue Star 1.5 Ton 5 Star Convertible 5 in 1 Cooling Inverter Split Air Conditioner (IC518YNU, White)</h5>
-                          <h4>₹49,490 M.R.P: <h4 class="text-decoration-line-through">₹69,990</h4>(28% off)
-                            Save extra with No Cost EMISave extra with No Cost EMI</h4>
+                          <h5 class="card-title">Godrej L Side-by-Side Refrigerator</h5>
+                          <h4>₹56,000</h4>
                           <a href="http://127.0.0.1:5500/Infinity%20Products/AddToCart.html" class="btn btn-outline-dark">Add to cart</a>
                         </div>
                       </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <img src="Images/air3.jpg" class="card-img-top" alt="Refrigerator" width="300" height="300">
+                        <img src="Images/fridge3.webp" class="card-img-top" alt="Refrigerator" width="300" height="300" id="rendering">
                         <div class="card-body text-center">
                           <h5 class="card-title">Samsung 1.5 Ton 3 Star Wind-Free Technology Inverter Split AC (Copper, Convertible 5-in-1 Cooling Mode, Anti-bacterial Filter, 2023 Model AR18CYLAMWK White)</h5>
                           <h4>50+ bought in past month
@@ -81,7 +79,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <img src="Images/air4.jpg" class="card-img-top" alt="Refrigerator" width="300" height="300">
+                        <img src="Images/air4.jpg" class="card-img-top" alt="Refrigerator" width="300" height="300" id="rendering">
                         <div class="card-body text-center">
                           <h5 class="card-title">Carrier 1.5 Ton 5 Star Inverter Split AC (Copper,ESTER Dxi, 6-in-1 Flexicool Inverter, 2022 Model,R32 ,White)</h5>
                           <h4>₹45,580 M.R.P: <h4 class="text-decoration-line-through">₹69,990</h4>(35% off)
@@ -92,7 +90,7 @@
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <img src="Images/air5.webp" class="card-img-top" alt="Refrigerator" width="300" height="300">
+                        <img src="Images/air5.webp" class="card-img-top" alt="Refrigerator" width="300" height="300" id="rendering">
                         <div class="card-body text-center">
                           <h5 class="card-title">Carrier 2 Ton 5 Star Inverter Split AC (Copper,ESTER Dxi, 6-in-1 Flexicool Inverter, 2022 Model,R32,White)
                             3.9 out of 5 stars</h5>
@@ -104,7 +102,7 @@
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <img src="Images/air6.webp" class="card-img-top" alt="Refrigerator" width="300" height="300">
+                        <img src="Images/air6.webp" class="card-img-top" alt="Refrigerator" width="300" height="300" id="rendering">
                         <div class="card-body text-center">
                           <h5 class="card-title">Blue Star 1.5 Ton 3 Star 5 in 1 Convertible Inverter Split AC (Copper, Multi Sensors, Stabalizer Free Operation, Self Diagnosis, 2023 Model, IA318FNU, White)</h5>
                           <h4>No featured offers available
@@ -117,7 +115,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <img src="Images/air7.jpg" class="card-img-top" alt="Refrigerator" width="300" height="300">
+                        <img src="Images/air7.jpg" class="card-img-top" alt="Refrigerator" width="300" height="300" id="rendering">
                         <div class="card-body text-center">
                           <h5 class="card-title">Blue Star 1.5 Ton 3 Star Fixed Speed Window AC</h5>
                           <h4>-31% ₹34,440
@@ -130,7 +128,7 @@
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <img src="Images/air8.webp" class="card-img-top" alt="Refrigerator" width="300" height="300">
+                        <img src="Images/air8.webp" class="card-img-top" alt="Refrigerator" width="300" height="300" id="rendering">
                         <div class="card-body text-center">
                           <h5 class="card-title">Voltas Split Air Conditioner SAC 185V CAZZ, White</h5>
                           <h4>No featured offers available
@@ -141,7 +139,7 @@
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <img src="Images/airr9.webp" class="card-img-top" alt="Refrigerator" width="300" height="300">
+                        <img src="Images/airr9.webp" class="card-img-top" alt="Refrigerator" width="300" height="300" id="rendering">
                         <div class="card-body text-center">
                           <h5 class="card-title">Blue Star 4 in 1 Convertible 2 Ton 3 Star Inverter Split Air Conditioner with Dust Filter (Copper Condenser)</h5>
                           <h4>₹49,410 M.R.P: <h4 class="text-decoration-line-through"></h4> (42% off)
