--- a/Sign in.html
+++ b/Sign in.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sign In</title>
     <link rel="stylesheet" href="Sign in.css">
 </head>
 <body>
@@ -19,3 +19,4 @@
     </form>
 </body>
 </html>
+
