--- a/Washingmachine.html
+++ b/Washingmachine.html
@@ -22,7 +22,7 @@
           <a class="nav-link" href="http://127.0.0.1:5500/Infinity%20Products/WelcomePage.html#about">About Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="http://127.0.0.1:5500/Infinity%20Products/WelcomePage.html#contact">Contact</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -34,7 +34,7 @@
           </ul>
         </li>
       </ul>
-      <form class="d-flex" role="search">
+      <form class="d-flex" role="search" id="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
       </form>
     </div>
